More clean-up